@@ -176,6 +176,9 @@
 /* Define if the operating system supplies usleep without declaring it. */
 #undef DECLARE_USLEEP
 
+/* Define if usleep doesn't return a value. */
+#undef USLEEP_RETURNS_VOID
+
 /* Define if you have the bzero function.  */
 #undef HAVE_BZERO
 
