@@ -1,3 +1,10 @@
+1998-04-25  Mikael Djurfeldt  <mdj@kenneth>
+
+	* scmsigs.c: Declare usleep as returning void on some systems.
+	(scm_usleep): Return SCM_INUM0 on those systems.
+
+	* coop.c (usleep): Return void on some systems.
+
 1998-04-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* Makefile.am (libguile_la_LDFLAGS): Removed redundant -rpath.
